--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ h2 {
 
 .difficulty-select {
   font-size: large;
-  border: 1px solid black;
   cursor: pointer;
   padding: 5px;
   margin-left: 5px;
@@ -51,7 +50,6 @@ h2 {
 
 .status-select {
   font-size: medium;
-  border: 1px solid black;
   cursor: pointer;
   padding: 5px;
   margin-left: 5px;
@@ -79,4 +77,24 @@ h2 {
 /* Premium Styles */
 #premium {
   text-align: center;
+}
+
+/* Button/result styles */
+#result-span {
+  border: 1px solid black;
+  display: inline-block;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  min-height: 50px;
+  display: none;
+  width: -webkit-fill-available;
+}
+
+#button-container {
+  text-align: center;
+}
+
+#pick-problem {
+  height: 40px;
+  width: 50%;
 }
