created problem list

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,10 @@ h2 {
   margin-right: 10px;
 }
 
+#like-ratio {
+  padding-left: 10px;
+}
+
 /* Premium Styles */
 #premium {
   text-align: center;
